<resources>
    <string name="app_name">Shopaholism</string>

    <!-- fragment_wishes_overview.xml -->
    <string name="create_wish_button_text">Create</string>
    <string name="reprioritize">Rate</string>
    <string name="edit">Edit</string>
    <string name="wish_title_hint">Title</string>
    <string name="wish_description_hint">Description</string>
    <string name="wish_price_hint">Price</string>
    <string name="wish_apply_changes">Apply Changes</string>
    <string name="wish_delete">Delete</string>
    <string name="dialog_delete_wish">Do you wanna delete this wish?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="OK">OK</string>
    <string name="Cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="select_image">Select Image</string>
    <string name="wish_created_toast">Wish created</string>
    <string name="wish_creation_failed_toast">Wish couldn\'t be created</string>
    <string name="fragment_overview_header">Overview</string>
    <string name="fragment_edit_header">Edit Wish</string>
    <string name="fragment_delete_header">Delete?</string>
    <string name="fragment_create_header">Create Wish</string>
    <string name="which_sort_preferation_question">Which one do you want more?</string>
    <string name="page_indicator" translatable="false">%1$s / %2$s</string>
    <string name="fragment_sort_wish">Rate Wish</string>
    <string name="image_selection_cancelled">Image selection cancelled</string>
    <string name="add_wish">Create</string>
    <string name="wish_changes_applied">Changes applied</string>
    <string name="wish_apply_changes_failed">Failed to apply changes to wish</string>
    <string name="wish_deletion_success">Wish deleted</string>
    <string name="wish_deletion_failure">Deletion failed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="shop_name_with_price" translatable="false">%1$s | %2$s</string>
    <string name="wikipages_header">Wikipedia</string>
    <string name="no_related_products_found_error">Sorry, couldn\'t find anything related to this on wikipedia :(</string>
    <string name="no_wikipage_description_available">No description available :(</string>
    <string name="no_wishes_found">No wishes found :(</string>
    <string name="max_wiki_search_results">Max Wiki Search Results</string>
    <string name="nav_home_title">Overview</string>
    <string name="nav_settings_title">Settings</string>
</resources>