<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/create_wish_button"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:layout_marginBottom="8dp">

                <com.sar.shopaholism.presentation.widgets.FileImageView
                    android:id="@+id/wish_image"
                    android:layout_width="match_parent"
                    android:layout_height="194dp"
                    android:layout_marginBottom="8dp"
                    android:background="@color/cardview_dark_background"
                    android:scaleType="centerCrop"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/select_image_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:contentDescription="@string/select_image"
                    android:src="@drawable/ic_select_image"
                    app:layout_constraintBottom_toBottomOf="@id/wish_image"
                    app:layout_constraintEnd_toEndOf="@id/wish_image" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/wish_title_hint"
                app:startIconDrawable="@drawable/ic_wish_title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/wish_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textShortMessage" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/wish_description_hint"
                app:startIconDrawable="@drawable/ic_wish_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/wish_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/wish_price_hint"
                app:startIconDrawable="@drawable/ic_wish_price">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/wish_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/create_wish_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/create_wish_button_text"
        app:icon="@drawable/ic_add_wish"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_content" />

</androidx.constraintlayout.widget.ConstraintLayout>
